--- a/DyplomWork/DyplomWork.csproj
+++ b/DyplomWork/DyplomWork.csproj
@@ -228,6 +228,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Classes\Context.cs" />
+    <Compile Include="Classes\CurrentUser.cs" />
     <Compile Include="Classes\Manager.cs" />
     <Compile Include="Datas\AnswerOption.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -302,6 +303,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\ShowUsers.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\StudentCabinet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -320,6 +325,9 @@
     </Compile>
     <Compile Include="Pages\Autorization.xaml.cs">
       <DependentUpon>Autorization.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ShowUsers.xaml.cs">
+      <DependentUpon>ShowUsers.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\StudentCabinet.xaml.cs">
       <DependentUpon>StudentCabinet.xaml</DependentUpon>
