--- a/DyplomWork/DyplomWork.csproj
+++ b/DyplomWork/DyplomWork.csproj
@@ -318,6 +318,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\ShowStudents.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\ShowUsers.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -327,6 +331,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\TeacherCabinet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\ViewReport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -350,6 +358,9 @@
     <Compile Include="Pages\Autorization.xaml.cs">
       <DependentUpon>Autorization.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\ShowStudents.xaml.cs">
+      <DependentUpon>ShowStudents.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ShowUsers.xaml.cs">
       <DependentUpon>ShowUsers.xaml</DependentUpon>
     </Compile>
@@ -358,6 +369,9 @@
     </Compile>
     <Compile Include="Pages\TeacherCabinet.xaml.cs">
       <DependentUpon>TeacherCabinet.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ViewReport.xaml.cs">
+      <DependentUpon>ViewReport.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
